# dtcraft-datapacks

./: .gitignore  LICENSE  README.md  build.sh  invoke.yaml  preprocess.sh  pyproject.toml  tasks.py  watch.sh
.github/ISSUE_TEMPLATE/: datapack-bug-report.md
.github/scripts/: build_datapack.sh  build_datapacks.sh  conftest.py  run_tests.sh  setup_minecraft_server.sh  start_minecraft_server.sh  test_server.py
.github/workflows/: main.yml
array/: README.md  documentation.md  pack.mcmeta
array/data/dt.array/functions/: load.mcfunction
array_util/: pack.mcmeta
array_util/data/dt.array_util/functions/: load.mcfunction
autocraft/: README.md  pack.mcmeta
autocraft/data/: README.md
autocraft/data/autocraft/advancements/: autocrafter.json  (+1 more)
call-stack/: README.md  documentation.md  pack.mcmeta
callback/: pack.mcmeta
click-craft/: pack.mcmeta
conveyer/: pack.mcmeta
crafting/: README.md  documentation.md  pack.mcmeta
crafting-util/: pack.mcmeta
custom-block/: README.md  documentation.md  pack.mcmeta
custom_block/: README.md  documentation.md  pack.mcmeta
deptree/: README.md  pack.mcmeta
gui/: README.md  pack.mcmeta
inventory/: README.md  documentation.md  pack.mcmeta
inventory-sort/: README.md  pack.mcmeta
inventory-utils/: pack.mcmeta
raycast/: README.md  documentation.md  pack.mcmeta
refill/: README.md  pack.mcmeta
refill2/src/: pack.py
resourcepacks/autocraft_resourcepack/: pack.mcmeta
test-pack/: pack.mcmeta
unittest/: README.md  documentation.md  pack.mcmeta
user-utils/: README.md
version/: pack.mcmeta
(+27813 files in other folders)
